TL/Labwork1/autocell/parser.output
   0  $accept : %entry% $end

   1  program : INT DIMENSIONS OF config END opt_statements EOF

   2  config : INT DOT_DOT INT
   3         | fields

   4  fields : field
   5         | fields COMMA field

   6  field : ID OF INT DOT_DOT INT

   7  opt_statements :
   8                 | statement

   9  statement : cell ASSIGN expression
  10            | ID ASSIGN expression

  11  cell : LBRACKET INT COMMA INT RBRACKET

  12  expression : cell
  13             | INT
  14             | ID
  15             | INT PLUS INT

  16  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (16)

	INT  shift 3
	.  error

	program  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : INT . DIMENSIONS OF config END opt_statements EOF  (1)

	DIMENSIONS  shift 5
	.  error


state 4
	%entry% : '\001' program .  (16)

	.  reduce 16


state 5
	program : INT DIMENSIONS . OF config END opt_statements EOF  (1)

	OF  shift 6
	.  error


state 6
	program : INT DIMENSIONS OF . config END opt_statements EOF  (1)

	ID  shift 7
	INT  shift 8
	.  error

	config  goto 9
	fields  goto 10
	field  goto 11


state 7
	field : ID . OF INT DOT_DOT INT  (6)

	OF  shift 12
	.  error


state 8
	config : INT . DOT_DOT INT  (2)

	DOT_DOT  shift 13
	.  error


state 9
	program : INT DIMENSIONS OF config . END opt_statements EOF  (1)

	END  shift 14
	.  error


state 10
	config : fields .  (3)
	fields : fields . COMMA field  (5)

	COMMA  shift 15
	END  reduce 3


state 11
	fields : field .  (4)

	.  reduce 4


state 12
	field : ID OF . INT DOT_DOT INT  (6)

	INT  shift 16
	.  error


state 13
	config : INT DOT_DOT . INT  (2)

	INT  shift 17
	.  error


state 14
	program : INT DIMENSIONS OF config END . opt_statements EOF  (1)
	opt_statements : .  (7)

	LBRACKET  shift 18
	ID  shift 19
	EOF  reduce 7

	opt_statements  goto 20
	statement  goto 21
	cell  goto 22


state 15
	fields : fields COMMA . field  (5)

	ID  shift 7
	.  error

	field  goto 23


state 16
	field : ID OF INT . DOT_DOT INT  (6)

	DOT_DOT  shift 24
	.  error


state 17
	config : INT DOT_DOT INT .  (2)

	.  reduce 2


state 18
	cell : LBRACKET . INT COMMA INT RBRACKET  (11)

	INT  shift 25
	.  error


state 19
	statement : ID . ASSIGN expression  (10)

	ASSIGN  shift 26
	.  error


state 20
	program : INT DIMENSIONS OF config END opt_statements . EOF  (1)

	EOF  shift 27
	.  error


state 21
	opt_statements : statement .  (8)

	.  reduce 8


state 22
	statement : cell . ASSIGN expression  (9)

	ASSIGN  shift 28
	.  error


state 23
	fields : fields COMMA field .  (5)

	.  reduce 5


state 24
	field : ID OF INT DOT_DOT . INT  (6)

	INT  shift 29
	.  error


state 25
	cell : LBRACKET INT . COMMA INT RBRACKET  (11)

	COMMA  shift 30
	.  error


state 26
	statement : ID ASSIGN . expression  (10)

	LBRACKET  shift 18
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	expression  goto 34


state 27
	program : INT DIMENSIONS OF config END opt_statements EOF .  (1)

	.  reduce 1


state 28
	statement : cell ASSIGN . expression  (9)

	LBRACKET  shift 18
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	expression  goto 35


state 29
	field : ID OF INT DOT_DOT INT .  (6)

	.  reduce 6


state 30
	cell : LBRACKET INT COMMA . INT RBRACKET  (11)

	INT  shift 36
	.  error


state 31
	expression : ID .  (14)

	.  reduce 14


state 32
	expression : INT .  (13)
	expression : INT . PLUS INT  (15)

	PLUS  shift 37
	EOF  reduce 13


state 33
	expression : cell .  (12)

	.  reduce 12


state 34
	statement : ID ASSIGN expression .  (10)

	.  reduce 10


state 35
	statement : cell ASSIGN expression .  (9)

	.  reduce 9


state 36
	cell : LBRACKET INT COMMA INT . RBRACKET  (11)

	RBRACKET  shift 38
	.  error


state 37
	expression : INT PLUS . INT  (15)

	INT  shift 39
	.  error


state 38
	cell : LBRACKET INT COMMA INT RBRACKET .  (11)

	.  reduce 11


state 39
	expression : INT PLUS INT .  (15)

	.  reduce 15


16 terminals, 10 nonterminals
17 grammar rules, 40 states
